--- a/src/sass/essential/breakpoints/_991.scss
+++ b/src/sass/essential/breakpoints/_991.scss
@@ -64,7 +64,7 @@
             margin-left: -15px;
             margin-right: -15px;
             width: auto;
-            margin-bottom: 0;
+            padding-bottom: 0;
 
             .owl-dots{
                 position: relative;
