--- a/src/sass/essential/breakpoints/_575.scss
+++ b/src/sass/essential/breakpoints/_575.scss
@@ -96,4 +96,29 @@
             }
         }
     }
+
+    .property-search-info-wrap{
+        padding-bottom: 0;
+        border-bottom-width: 0;
+
+        &--inner{
+            .propertyhive-views{
+                display: block;
+                width: 100%;
+
+                ul{
+                    display: flex;
+                    margin-left: -15px;
+                    margin-right: -15px;
+                    border-left-width: 0;
+                    border-right-width: 0;
+
+                    li{
+                        flex: 1;
+                        text-align: center;
+                    }
+                }
+            }
+        }
+    }
 }
