--- a/src/sass/essential/breakpoints/_650.scss
+++ b/src/sass/essential/breakpoints/_650.scss
@@ -1,3 +1,6 @@
 @media screen and (max-width: 650px) {
-
+    div.properties.view-grid,
+    ul.properties.view-grid{
+        grid-template-columns: 1fr;
+    }
 }
