--- a/templates/propertyhive/shortcode/similar-properties.twig
+++ b/templates/propertyhive/shortcode/similar-properties.twig
@@ -1,11 +1,11 @@
 <section class="page-section page-section--padding50 section-shortcode-similar-properties">
     <div class="container">
-        <div class="page-section--heading">
+        <div class="page-section--heading text-center text-md-left">
             <div class="row align-items-center">
-                <div class="col-xl-6">
+                <div class="col-md-8">
                     <h3 class="text-uppercase">SIMILAR PROPERTIES In This Area</h3>
                 </div>
-                <div class="col-xl-6 text-xl-right">
+                <div class="col-md-4 text-md-right mt-3 mt-md-0">
                     {% include 'components/parts/link.twig' with {
                         link: {
                             title: 'More Properties',
