property detail page - responsive - body bottom offset

--- a/src/sass/essential/breakpoints/_767.scss
+++ b/src/sass/essential/breakpoints/_767.scss
@@ -276,6 +276,8 @@
     }
 
     .single-property{
+        padding-bottom: 60px;
+
         div.property{
             .entry-summary{
                 .property-detail-heading{
