--- a/src/sass/essential/breakpoints/_767.scss
+++ b/src/sass/essential/breakpoints/_767.scss
@@ -103,10 +103,22 @@
     }
 
     .section-page-top{
+        &--left-wrap{
+            text-align: center;
+        }
+
         &--image-wrap{
             margin-top: 15px;
             margin-left: -15px;
             margin-right: -15px;
+
+            img{
+                width: 100%;
+            }
+        }
+
+        &--content{
+            font-size: 16px;
         }
     }
 
