--- a/templates/single-new-home.twig
+++ b/templates/single-new-home.twig
@@ -106,7 +106,7 @@
         </div>
     </section>
 
-    {% if features.content %}
+    {% if post.nh_has_features %}
 
         <section class="page-section page-section--padding50 section-features-image">
             <div class="container-wide">
