--- a/templates/404.twig
+++ b/templates/404.twig
@@ -5,7 +5,7 @@
     <section class="section-404">
         <div class="container">
             <div class="row">
-                <div class="col-xl-5 offset-xl-1">
+                <div class="col-xl-5 offset-xl-1 content-clear">
                     {{ options.section_404.content }}
                 </div>
                 <div class="col-xl-5 text-xl-right">
