--- a/src/sass/essential/sections/_cta-carousel.scss
+++ b/src/sass/essential/sections/_cta-carousel.scss
@@ -68,6 +68,14 @@
                 }*/
             }
         }
+
+        &:hover{
+            .owl-dots{
+                &:after{
+                    animation-play-state: paused;
+                }
+            }
+        }
     }
 }
 
