careers page + responsive

--- a/src/sass/essential/breakpoints/_575.scss
+++ b/src/sass/essential/breakpoints/_575.scss
@@ -194,4 +194,20 @@
             }
         }
     }
+
+    #whr_embed_hook{
+        .whr-group{
+            font-size: 22px;
+            margin-top: 50px;
+            margin-bottom: 0;
+        }
+
+        .whr-items{
+            .whr-item{
+                .whr-title{
+                    font-size: 16px;
+                }
+            }
+        }
+    }
 }
