--- a/src/sass/essential/shortcode/_workable-careers-list.scss
+++ b/src/sass/essential/shortcode/_workable-careers-list.scss
@@ -1,3 +1,49 @@
 #whr_embed_hook{
+    .whr-group{
+        text-transform: uppercase;
+        margin-bottom: 25px;
+        margin-top: 70px;
 
+        &:first-child{
+            margin-top: 0;
+        }
+    }
+
+    .whr-items{
+        list-style: none;
+        margin: 0;
+        padding: 0;
+
+        .whr-item{
+            border-bottom: 1px solid $support-color4;
+            padding: 30px 0;
+
+            .whr-title{
+                text-transform: uppercase;
+
+                a{
+                    &:after,
+                    &:hover{
+                        color: $brand-main-red;
+                    }
+
+                    &:after{
+                        content: "\f054";
+                        font-family: 'Font Awesome 6 Pro';
+                        margin-left: 10px;
+                    }
+
+                    &:hover{
+                        text-decoration: none;
+                    }
+                }
+            }
+
+            .whr-info{
+                list-style: none;
+                margin: 0;
+                padding: 0;
+            }
+        }
+    }
 }
