get a valuation page responsive

--- a/components/sections/valuation_types.twig
+++ b/components/sections/valuation_types.twig
@@ -9,14 +9,14 @@
                 {% endif %}
                 <div class="valuation-types-wrap">
                     <div class="row">
-                        <div class="col-xl-6">
+                        <div class="col-md-6">
 
                             {% include 'parts/valuation-box.twig' with {
                                 data: section.vt_type_1
                             } %}
 
                         </div>
-                        <div class="col-xl-6">
+                        <div class="col-md-6 mt-4 mt-md-0">
 
                             {% include 'parts/valuation-box.twig' with {
                                 data: section.vt_type_2
