--- a/src/sass/essential/breakpoints/_1200.scss
+++ b/src/sass/essential/breakpoints/_1200.scss
@@ -38,6 +38,12 @@
                 font-size: 30px;
             }
         }
+
+        &.section-valuation{
+            .section-content-image--content{
+                padding-right: 285px;
+            }
+        }
     }
 
     .section-cta-carousel{
