--- a/src/sass/essential/breakpoints/_575.scss
+++ b/src/sass/essential/breakpoints/_575.scss
@@ -7,6 +7,10 @@
 
         &--heading{
             margin-bottom: 30px;
+
+            h2{
+                font-size: 22px;
+            }
         }
     }
 
@@ -76,6 +80,12 @@
 
         &--mobile-image{
             margin-right: -30px;
+        }
+
+        &.section-valuation{
+            .section-content-image--content{
+                padding: 30px 15px;
+            }
         }
     }
 
@@ -206,6 +216,23 @@
             .whr-item{
                 .whr-title{
                     font-size: 16px;
+                }
+            }
+        }
+    }
+
+    .section-valuation-types{
+        .valuation-type-block{
+            font-size: 14px;
+
+            h3{
+                font-size: 16px;
+                margin-bottom: 20px;
+            }
+
+            ul{
+                li:not(:first-child){
+                    margin-top: 13px;
                 }
             }
         }
