popular searches responsive

--- a/components/static-sections/properties.twig
+++ b/components/static-sections/properties.twig
@@ -20,7 +20,7 @@
                             {% if actions | length > 1 %}
                                 <div class="col-xl-5 {{ loop.first ? 'offset-xl-1' : '' }}">
                             {% else %}
-                                <div class="col-xl-2 offset-xl-5">
+                                <div class="col-xl-2 offset-xl-5 col-md-4 offset-md-4">
                             {% endif %}
 
                                 {% include 'components/parts/link.twig' with {
