--- a/components/sections/branch_content.twig
+++ b/components/sections/branch_content.twig
@@ -1,15 +1,15 @@
 <section class="page-section page-section--padding50 section-branch-content">
     <div class="container">
         <div class="row">
-            <div class="{{ section.bc_branch ? 'col-xl-5 offset-xl-1' : 'col-12' }}">
-                <div class="content-clear pr-5">
+            <div class="{{ section.bc_branch ? 'col-lg-5 offset-lg-1 col-md-7' : 'col-12' }}">
+                <div class="content-clear pr-md-5">
                     {{ section.bc_editor }}
                 </div>
             </div>
 
             {% if section.bc_branch %}
 
-                <div class="col-xl-4">
+                <div class="col-lg-4 col-md-5 mt-4 mt-md-0">
                     {% include 'global/branch.twig' with {
                         post: TimberPost(section.bc_branch)
                     } %}
