images lazy loading + blog list responsive

--- a/components/sections/content_image.twig
+++ b/components/sections/content_image.twig
@@ -14,13 +14,13 @@
                         } %}
                     {% endif %}
                     <div class="section-content-image--mobile-image d-block d-lg-none">
-                        <img src="{{ section.ci_image }}">
+                        <img src="{{ section.ci_image }}" loading="lazy">
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 d-none d-lg-block" data-aos="fade-up">
                 <div class="section-content-image--image-wrap">
-                    <img src="{{ section.ci_image }}">
+                    <img src="{{ section.ci_image }}" loading="lazy">
                 </div>
             </div>
         </div>
