--- a/components/sections/home_hero.twig
+++ b/components/sections/home_hero.twig
@@ -12,7 +12,7 @@
             </div>
             <div class="col-md-6">
                 <div class="section-home-hero--image">
-                    <img src="{{ section.hh_image }}">
+                    <img src="{{ section.hh_image }}" loading="lazy">
                 </div>
             </div>
         </div>
