--- a/components/sections/cta_carousel.twig
+++ b/components/sections/cta_carousel.twig
@@ -23,7 +23,7 @@
                             </div>
                             <div class="col-lg-6 cta-slide--image-column" data-aos="slide-up">
                                 <div class="cta-slide--image">
-                                    <img src="{{ item.image | resize(650,540) }}">
+                                    <img src="{{ item.image | resize(650,540) }}" loading="lazy">
                                 </div>
                             </div>
                         </div>
