--- a/components/static-sections/book-valuation.twig
+++ b/components/static-sections/book-valuation.twig
@@ -1,9 +1,9 @@
 {% if options.section_valuation.content %}
 
     <section class="page-section page-section--padding50 section-content-image section-valuation has-logo-watermark {{ short ? 'section-valuation--short' : '' }}">
-        <div class="container">
+            {% if not short %}<div class="container">{% endif %}
             <div class="row no-gutters text-center text-lg-left">
-                <div data-aos="fade-down" class="{{ short ? 'col-xl-10' : 'col-lg-9' }}">
+                <div data-aos="fade-down" class="{{ short ? 'col-xl-10 col-lg-11' : 'col-lg-9' }}">
                     <div class="bg-primary section-content-image--content">
                         {% if options.section_valuation.title %}
                             <h2 class="{{ not short ? 'h1' : '' }}">{{ options.section_valuation.title }}</h2>
@@ -20,13 +20,13 @@
                         </div>
                     </div>
                 </div>
-                <div data-aos="fade-up" class="{{ short ? 'col-xl-2' : 'col-lg-3' }} d-none d-lg-block">
+                <div data-aos="fade-up" class="{{ short ? 'col-xl-2 col-lg-1' : 'col-lg-3' }} d-none d-lg-block">
                     <div class="section-content-image--image-wrap">
                         <img src="{{ options.section_valuation.image }}">
                     </div>
                 </div>
             </div>
-        </div>
+            {% if not short %}</div>{% endif %}
     </section>
 
 {% endif %}
