--- a/src/sass/essential/breakpoints/_991.scss
+++ b/src/sass/essential/breakpoints/_991.scss
@@ -143,4 +143,45 @@
             }
         }
     }*/
+
+    .insight-sidebar{
+        .insight-widget{
+            .categories-list{
+                padding: 0;
+
+                .wp-block-group__inner-container{
+                    & > h5 {
+                        padding: 15px 0;
+                        margin-bottom: 0;
+                        position: relative;
+                        cursor: pointer;
+
+                        &:after {
+                            content: "\f078";
+                            font-family: "Font Awesome 6 Pro";
+                            position: absolute;
+                            top: 50%;
+                            right: 0;
+                            transform: translateY(-50%);
+                            color: $brand-main-red;
+                            transition: 0.5s ease;
+                        }
+                    }
+
+                    & > ul {
+                        display: none;
+                        padding-bottom: 15px;
+                    }
+
+                    &.list-opened{
+                        & > h5 {
+                            &:after{
+                                transform: translateY(-50%) rotate(180deg);
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
