blod detail responsive

--- a/components/static-sections/latest-posts.twig
+++ b/components/static-sections/latest-posts.twig
@@ -1,6 +1,6 @@
 {% set grid_css_class = 'col-lg-4 col-sm-6' %}
 {% if columns == 2 %}
-    {% set grid_css_class = 'col-xl-6' %}
+    {% set grid_css_class = 'col-md-6 mb-sm-5 mb-md-0' %}
 {% endif %}
 
 {% if posts.found_posts %}
