--- a/src/sass/essential/breakpoints/_1200.scss
+++ b/src/sass/essential/breakpoints/_1200.scss
@@ -66,4 +66,12 @@
             }
         }
     }
+
+    .insight-sidebar{
+        .insight-widget{
+            .branch-area-box-shortcode{
+                margin: 0;
+            }
+        }
+    }
 }
