--- a/templates/single.twig
+++ b/templates/single.twig
@@ -13,7 +13,7 @@
     <section class="page-section page-section--padding50">
         <div class="container">
             <div class="row">
-                <div class="col-xl-8">
+                <div class="col-xl-8 col-lg-9">
 
                     <div class="content-wrapper">
                         <article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
@@ -51,7 +51,7 @@
                     } %}
 
                 </div>
-                <div class="col-xl-3 offset-xl-1">
+                <div class="col-lg-3 offset-xl-1 order-lg-2">
 
                     {% include 'sidebar-insights.twig' %}
 
